--- a/views/index.erb
+++ b/views/index.erb
@@ -4,14 +4,14 @@
   <title>Is Delton Awake Now</title>
   <style>
     body{
-      background-color: <%= result ? '#66CC99' : '#CC0066' %>;
+      background-color: <%= "##{result['color']}" %>;
       margin: 0;
     }
   </style>
 </head>
 <body>
 <div style="color: white; font-size: 100pt; font-weight: bold; text-align: center; width: 100%; position: absolute; top: 50%; margin-top: -50pt">
-  <%= result ? 'Yes' : 'Nope' %>
+  <%= result['text'] %>
 </div>
 </body>
 </html>
