--- a/views/index.erb
+++ b/views/index.erb
@@ -1,7 +1,7 @@
 <!Doctype html>
 <html>
 <head>
-  <title>Is Delton Awake Now</title>
+  <title><%=title%></title>
   <style>
     body{
       background-color: <%= "##{result['color']}" %>;
