--- a/views/index.erb
+++ b/views/index.erb
@@ -13,5 +13,22 @@
 <div style="color: white; font-size: 100pt; font-weight: bold; text-align: center; width: 100%; position: absolute; top: 50%; margin-top: -50pt">
   <%= result['text'] %>
 </div>
+<div id="time" style="color: white; font-size: 50pt; font-weight: bold; text-align: center; width: 100%; position: absolute; top: 100%; margin-top: -60pt">
+  +00:00:00
+</div>
+<script>
+  String.prototype.padLeft = function(l,c) {return new Array(l-this.length+1).join(c||" ")+this};
+  var time = <%= time %>;
+  var div = document.getElementById("time");
+  var tick = function(){
+    var differ = Math.round(new Date().getTime()/1000) - time;
+    var sec = differ%60;
+    var min = Math.floor((differ-sec)/60)%60;
+    var hour = Math.floor(differ/3600);
+    document.getElementById("time").innerHTML = "+" + hour.toString().padLeft(2, '0') + ":" + min.toString().padLeft(2, '0') + ":" + sec.toString().padLeft(2, '0');
+    setTimeout("tick()", 1000);
+  };
+  tick();
+</script>
 </body>
 </html>
